# mantis-social-media

./: .clawmetry-fleet.db  .clawmetry-metrics.json  .gitignore  AGENTS.md  AUTOMATION-STACK.md  DEVLOG.md  HEARTBEAT.md  MEMORY.md  OUTREACH-CRAFT.md  engagement-log.json  humanizer-test-drafts.txt  kameleon-leads.db  kameleondb.db  landing-page-rules.md  openclaw-session-3f74ef35-2026-02-27T06-49-34.html  session-findings.md  session-history-export.md  skill-publisher-log.json  skill-queue.json  skill-requester-emails.json  skill-requests-processed.json  warm-leads.json
.clawhub/: lock.json
.openclaw/: workspace-state.json
clawmetry-plugin/: pyproject.toml
clawmetry-plugin/tweet_approval/: __init__.py
dashboard/: README.md  V1-COMPLETE.md  changelog.json  data.json  docs.json  feedback-store.json  generate-data.js  index.html  launch.sh  missions.json  nightly-review.js  server.js  sprints.json
memory/: 2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-13.md  2026-03-17.md  2026-03-19.md  2026-03-21.md
openclaw-workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  _discord-session-opener.md  breaking-news-state.json  decisions.json  drafts-schema.md  drafts.json  feedback-patterns.md  social-listening-state.json
outreach/: BUGFIX-ENGAGEMENT-SUMMARY-V2.md  BUGFIX-ENGAGEMENT-SUMMARY.md  BUGFIX-SAVE-SUMMARIES-TO-FILES.md  ENGAGEMENT-TRACKING-IMPLEMENTATION.md  comment-drafts.md  engagement-log.json  inbound-leads.json  scheduling-rules.md  skill-finder-candidates.json  (+6 more)
(+242 files in other folders)
